@@ -14,6 +14,7 @@ Kiwix 0.9 beta3
 * Kiwix again (was a regression) able to deal with relative paths in the library.xml (ID: 3397592)
 * Now possible to open ZIM file with accented paths on Windows (ID: 3107895)
 * New keyboard shortcuts to deal with bookmarks
+* Add arrow keys handling to navigate in the content manager (ID: 3389511)
 
 Kiwix 0.9 beta2
 * Regression fix, tabs should not be visible per default
